feat: apiKey/endpoint 改为由入参传入，移除配置文件注入